# Halftone_QuantizedKVCache

./: LICENSE  README.md  pyproject.toml
data/: distribution_report.txt
docs/: README.md
reference/: page_attention_int8_pytorch.py  page_attention_reference.py
src/analysis_kvcache/: analyze_distribution.py  collect_kvcache_distribution.py
src/kernels/: int8_decode_attn_triton.py  quant_kv_triton.py
tests/: diagnose_layer0.py  qwen_kvcache_full.py  qwen_kvcache_test.py
